# sports_analyzer

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  __init__.py  install_apple_silicon.sh  install_deps.sh  pyproject.toml  requirements.txt  setup.py  simple_install.sh
annotators/: __init__.py  soccer.py
common/: __init__.py  ball.py  team.py  view.py
configs/: __init__.py  base.py  soccer.py
examples/soccer/: main.py  requirements.txt  setup.sh
